--- a/app/templates/components/message.hbs
+++ b/app/templates/components/message.hbs
@@ -6,7 +6,7 @@
   <figure class='w-10 h-10 rounded overflow-hidden mr-3'>
     <img
       class='message__user-avatar'
-      src='https://gravatar.com/avatar/96c332a96737c6668906232e39cb16ef?s=200'
+      src={{@message.user.iconUrl}}
       alt=''
     />
   </figure>
@@ -17,16 +17,16 @@
         href='#'
         class='message__user-name text-black font-bold no-underline hover:underline'
       >
-        Lisa Huang-North
+        {{@message.user.name}}
       </a>
       <span class='sr-only'>at</span>
       <time class='message__timestamp text-grey-darker text-xs font-normal'>
-        Apr 21, 2019 12:21.38 PM
+        {{format-timestamp @message.createdAt}}
       </time>
     </h5>
 
     <p class='message__body text-black leading-normal'>
-      Would you like to join my professional network?
+      {{@message.body}}
     </p>
   </div>
 
