Creating and deleting messages

--- a/app/templates/components/chat-container.hbs
+++ b/app/templates/components/chat-container.hbs
@@ -2,5 +2,8 @@
   {{did-insert this.loadMessages}} 
   {{did-update this.loadMessages @channel}}
 >
-  {{yield this.messages}}
+  {{yield this.messages (hash
+    createMessage=this.createMessage
+    deleteMessage=this.deleteMessage
+  )}}
 </main>
