--- a/app/templates/components/channel-footer.hbs
+++ b/app/templates/components/channel-footer.hbs
@@ -1,6 +1,7 @@
 <!-- Channel Footer -->
 <footer class='pb-6 px-4 flex-none channel-footer'>
   <form
+    {{on "submit" this.handleSubmit}}
     class='flex w-full rounded-lg border-2 border-grey overflow-hidden'
     aria-labeledby='message-label'
   >
@@ -31,12 +32,14 @@
       id='message-input'
       class='channel-footer__message-input w-full px-4'
       placeholder='Message #general'
+      value={{this.body}}
+      {{on "input" this.updateMessageBody}}
       type='text'
     />
 
     <button
-      disabled
-      class='channel-footer__message-send-button font-bold uppercase opacity-50 bg-grey-dark text-white border-teal-dark p-2'
+      disabled={{this.isDisabled}}
+      class='channel-footer__message-send-button font-bold uppercase {{if this.isDisabled "bg-grey-dark opacity-50" "bg-teal-dark"}} text-white border-teal-dark p-2'
     >
       SEND
     </button>
