--- a/app/templates/teams/team/channel.hbs
+++ b/app/templates/teams/team/channel.hbs
@@ -1,5 +1,5 @@
 <!-- Channel -->
-<ChatContainer @channel={{this.model}} as |messages|>
+<ChatContainer @channel={{this.model}} as |messages channelApi|>
   <ChannelHeader 
     @title={{this.model.name}}
     @description={{this.model.description}} />
@@ -7,8 +7,8 @@
   <!-- Channel Message List -->
   <div class="py-4 flex-1 overflow-y-scroll channel-messages-list" role="list">
     {{#each messages as |m|}}
-      <Message @message={{m}} />
+      <Message @message={{m}} @delete={{fn channelApi.deleteMessage m.id}} />
     {{/each}}
   </div>
-  <ChannelFooter />
+  <ChannelFooter @sendMessage={{channelApi.createMessage}} />
 </ChatContainer>
